[metadata]
name = edutorch
version = 0.0.3
description = Rewritten PyTorch framework designed to help you learn AI/ML
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tyleryep/edutorch
author = Tyler Yep
author_email = tyep@cs.stanford.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.7

[mypy]
strict = True
ignore_missing_imports = True

[pylint.MESSAGES CONTROL]
generated-members = numpy.*, torch.*
extension-pkg-whitelist = numpy, torch
disable =
    missing-docstring,
    invalid-name,
    duplicate-code,
    too-many-locals,
    too-many-arguments,
    too-many-instance-attributes,
    too-many-function-args,
    unbalanced-tuple-unpacking,

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203,F401
