[metadata]
name = edutorch
version = 0.0.3
description = Rewritten PyTorch framework designed to help you learn AI/ML
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tyleryep/edutorch
author = Tyler Yep
author_email = tyep@cs.stanford.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.package_data]
edutorch = py.typed

[mypy]
# strict = True, waiting for updated numpy versions
allow_untyped_calls = True
warn_return_any = False
show_error_codes = True
enable_error_code = ignore-without-code

[pylint.MASTER]
load-plugins = pylint_strict_informational

[pylint.MESSAGES CONTROL]
generated-members = numpy.*, torch.*
extension-pkg-whitelist = numpy, torch
enable =
    useless-suppression,
    deprecated-pragma,
    use-symbolic-message-instead,
disable =
    missing-docstring,
    invalid-name,
    duplicate-code,
    too-many-locals,
    too-many-arguments,
    too-many-instance-attributes,
    too-many-function-args,
    unbalanced-tuple-unpacking,

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203,F401
