[metadata]
name = edutorch
version = 0.0.3
description = Rewritten PyTorch framework designed to help you learn AI/ML
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tyleryep/edutorch
author = Tyler Yep
author_email = tyep@cs.stanford.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.12
include_package_data = True

[options.package_data]
edutorch = py.typed

[mypy]
strict = True
warn_unreachable = True
disallow_any_unimported = True
extra_checks = True
enable_error_code = explicit-override,ignore-without-code

warn_return_any = False
